--- a/wgscovplot/tmpl/covplot_template.html
+++ b/wgscovplot/tmpl/covplot_template.html
@@ -38,10 +38,113 @@
             evt.currentTarget.className += " active";
         }
     </script>
+
     <script type="text/javascript">
         {% include "js/wgscovplot.js" %}
     </script>
+
     <script>
+        /**
+         * Reference Sequence
+         */
+        window.ref_seq = "{{ ref_seq }}";
+
+        /**
+         * List of samples name
+         */
+        window.samples = {{ samples_name }}
+
+        /**
+         * Dict of depth data
+         * {samples_name: depth_data}
+         */
+        window.depths = {{ depth_data }};
+
+        /**
+         * Dict of variant data
+         * {samples_name: variant_data}
+         */
+        window.variants = {{ variant_data }};
+
+        /**
+         * Dict of gene features
+         * [{
+         *     'name': 'feature_name'
+         *     'value: [index, start_pos, end_pos, level, strand, 'gene_features' or 'amplicon_features']
+         *     'itemStyle': {
+         *          'color': 'color'
+         *     }
+         * }]
+         */
+        var gene_feature = {{ gene_feature }}
+
+        /**
+         * Default properties for gene features chart, to have best view for the whole chart, user can adjust high, right/left/top margin
+         *  'max_grid_height': 80,
+         *  'rec_items_height': 12,
+         *  'minus_strand_level': 55,
+         *  'grid_height': "15%"
+         *
+         */
+        var gene_feature_properties = {{ gene_feature_properties }}
+
+        /**
+         * Whether amplicon plot or normal coverage plot
+         * @type {boolean}
+         */
+        var amplicon = "{{amplicon}}"
+
+        /**
+         * Dict of Amplicon Depth Coverage
+         * { sample_name: [
+         *      {   value : [start, end, depth, amplicon_name],
+         *          itemStyle: { color: 'color'
+         *      }
+         *    ]
+         * }
+         *
+         */
+        var amplicon_data = {{ amplicon_data }}
+        const ref_len = window.ref_seq.length;
+
+        /**
+         * Variable is used keep track the current number samples in the chart and is used for toggling slider
+         * @type {number}
+         */
+        var grid_length;
+
+        /**
+         * Variable is used for initial y_start for rendering gene features
+         * @type {number}
+         */
+        var y_start;
+
+        const default_num_chart = 3;
+
+        /**
+         * An array of positions of reference sequence which represent in X-Axis
+         * @type {number[]}
+         */
+        var positions = [...Array(ref_len + 1).keys()];
+        positions.shift();
+
+        /**
+         * Variable is used to toggle gene label name
+         * @type {boolean}
+         */
+        var invisible_gene_label = false;
+
+        /**
+         * Dict of color for coloring variant position in the chart
+         * @type {A: string, C: string, T: string, G: string}
+         */
+        var ntColor = {
+            "A": "#ea5e48",
+            "C": "#eaca48",
+            "G": "#6ad82b",
+            "T": "#2b87d8",
+        }
+
         function updateChartDivSize() {
             let BOTTOM_PADDING = 20;
             let top = $chart.getBoundingClientRect().top;
@@ -52,6 +155,7 @@
             $chart.style.height = height + 'px';
             chart.resize();
         }
+
         window.addEventListener("resize", updateChartDivSize);
         document.addEventListener("DOMContentLoaded", function(event) {
             var $chart = document.getElementById('chart');
@@ -70,6 +174,7 @@
             chart.setOption(option = getCoverageChartOption(initial_samples, initial_depths, initial_variants));
             chartDispatchDataZoomAction()
         })
+
     </script>
 </body>
 </html>
