--- a/wgscovplot/tmpl/covplot_template.html
+++ b/wgscovplot/tmpl/covplot_template.html
@@ -108,13 +108,14 @@
         const ref_len = window.ref_seq.length;
 
         /**
-         * Variable is used keep track the current number samples in the chart and is used for toggling slider
+         * A variable is used keep track the current number samples in the chart and is used for toggling slider
          * @type {number}
          */
         var grid_length;
 
+
         /**
-         * Variable is used for initial y_start for rendering gene features
+         * A variable is used for initial y_start for rendering gene features
          * @type {number}
          */
         var y_start;
@@ -129,7 +130,7 @@
         positions.shift();
 
         /**
-         * Variable is used to toggle gene label name
+         * A variable is used to toggle gene label name
          * @type {boolean}
          */
         var invisible_gene_label = false;
@@ -164,7 +165,7 @@
             window.chart = chart;
             updateChartDivSize();
             var initial_samples = _.slice(window.samples, 0, default_num_chart)
-            var initial_depths =[]
+            var initial_depths = []
             var initial_variants = []
             initial_samples.forEach(sample => {
                 initial_depths.push(window.depths[sample]);
