--- a/wgscovplot/tmpl/wgscovplot_template.html
+++ b/wgscovplot/tmpl/wgscovplot_template.html
@@ -92,7 +92,7 @@
         })();
 
         /**
-         * A closure is used for initial y_start for rendering gene features
+         * A closure is used for initial y_start for rendering gene/amplicon features
          * @type {function(): number}
          */
         var yStart = (function (){
