change to wgscovplot.bundle.js

--- a/wgscovplot/tmpl/wgscovplot_template.html
+++ b/wgscovplot/tmpl/wgscovplot_template.html
@@ -11,7 +11,7 @@
     <style>{{ select2_css }}</style>
     <script>{{ select2_js }}</script>
     <script type="text/javascript">
-        {% include "js/wgscovplot.js" %}
+        {% include "js/wgscovplot.bundle.js" %}
     </script>
 </head>
 <body>
@@ -21,7 +21,7 @@
     {% endblock %}
 
     <script type="text/javascript">
-        {% include "js/main_wgscovplot.js" %}
+        {% include "js/wgscovplot.js" %}
     </script>
 
     <script>
