fixed chart performance issue

--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -56,7 +56,7 @@
                             <div class="mb-3 row">
                                 <label for="scale" class="col-sm-4 col-form-label">Scaling</label>
                                 <div class="col-sm-8">
-                                    <select class="form-select" id="scale" onchange="setScale(null, null)">
+                                    <select class="form-select" id="scale" onchange="setScale()">
                                         <option value="value">Linear</option>
                                         <option value="log" selected>Log</option>
                                     </select>
