--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -87,9 +87,19 @@
                     <div id="chartproperties" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <div class="row mb-3">
-                                <div class="form-check form-switch">
-                                    <label class="form-check-label" for="toggle-tooltip">Show Tooltip</label>
-                                    <input class="form-check-input" type="checkbox" id="toggle-tooltip" checked>
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-tooltip">Show Tooltip</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-tooltip" checked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="fix-tooltip-display">Fix Tooltip Position</label>
+                                        <input class="form-check-input" type="checkbox" id="fix-tooltip-display" unchecked>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -184,9 +194,11 @@
                     <div id="datazoom" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <div class="row mb-3">
-                                <div class="form-check form-switch">
-                                    <label class="form-check-label" for="toggle-slider">Show data zoom slider</label>
-                                    <input class="form-check-input" type="checkbox" id="toggle-slider" checked>
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-slider">Show data zoom slider</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-slider" checked>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
