--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -87,22 +87,6 @@
                     <div id="chartproperties" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <div class="row mb-3">
-                                <div>
-                                    <div class="form-check form-switch">
-                                        <label class="form-check-label" for="toggle-tooltip">Show Tooltip</label>
-                                        <input class="form-check-input" type="checkbox" id="toggle-tooltip" checked>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div>
-                                    <div class="form-check form-switch">
-                                        <label class="form-check-label" for="fix-tooltip-display">Fix Tooltip Position</label>
-                                        <input class="form-check-input" type="checkbox" id="fix-tooltip-display" unchecked>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
                                 <label for="render-env" class="col-sm-4 col-form-label">Renderer</label>
                                 <div class="col-sm-8">
                                     <select id="render-env" class="form-select" onchange="initWgscovplotRenderEnv()">
@@ -119,6 +103,52 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="card">
+                                <div class="card-header">Tooltip Display</div>
+                                <div class="card-body">
+                                    <div class="row mb-3">
+                                        <div>
+                                            <div class="form-check form-switch">
+                                                <label class="form-check-label" for="toggle-tooltip">Enable</label>
+                                                <input class="form-check-input" type="checkbox" id="toggle-tooltip" checked>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div>
+                                            <div class="form-check form-switch">
+                                                <label class="form-check-label" for="fix-tooltip-postion">Fix Position</label>
+                                                <input class="form-check-input" type="checkbox" id="fix-tooltip-postion" unchecked>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div>
+                                            <div class="form-check form-switch">
+                                                <label class="form-check-label" for="toggle-tooltip-trigger-click">Click Trigger</label>
+                                                <input class="form-check-input" type="checkbox" id="toggle-tooltip-trigger-click" unchecked>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div>
+                                            <div class="form-check form-switch">
+                                                <label class="form-check-label" for="toggle-tooltip-variant-sites">Variant Sites Only</label>
+                                                <input class="form-check-input" type="checkbox" id="toggle-tooltip-variant-sites" unchecked>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div>
+                                            <div class="form-check form-switch">
+                                                <label class="form-check-label" for="toggle-variant-comparation">Variant Sites Comparation</label>
+                                                <input class="form-check-input" type="checkbox" id="toggle-variant-comparation" checked>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
                             <div class="row mb-3">
                                 <div>
                                     <label for="chart-height-input" class="form-label">Subplot Height</label>
