--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -141,8 +141,8 @@
                                     <div class="row mb-3">
                                         <div>
                                             <div class="form-check form-switch">
-                                                <label class="form-check-label" for="toggle-variant-comparation">Variant Sites Comparation</label>
-                                                <input class="form-check-input" type="checkbox" id="toggle-variant-comparation" checked>
+                                                <label class="form-check-label" for="toggle-variant-comparison">Variant Sites Comparison</label>
+                                                <input class="form-check-input" type="checkbox" id="toggle-variant-comparison" checked>
                                             </div>
                                         </div>
                                     </div>
