update options for tooltip display

--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -117,7 +117,7 @@
                                     <div class="row mb-3">
                                         <div>
                                             <div class="form-check form-switch">
-                                                <label class="form-check-label" for="fix-tooltip-postion">Fix Position</label>
+                                                <label class="form-check-label" for="fix-tooltip-postion">Fix Tooltip Position</label>
                                                 <input class="form-check-input" type="checkbox" id="fix-tooltip-postion" unchecked>
                                             </div>
                                         </div>
@@ -125,7 +125,7 @@
                                     <div class="row mb-3">
                                         <div>
                                             <div class="form-check form-switch">
-                                                <label class="form-check-label" for="toggle-tooltip-trigger-click">Click Trigger</label>
+                                                <label class="form-check-label" for="toggle-tooltip-trigger-click">Trigger On Click</label>
                                                 <input class="form-check-input" type="checkbox" id="toggle-tooltip-trigger-click" unchecked>
                                             </div>
                                         </div>
@@ -133,8 +133,16 @@
                                     <div class="row mb-3">
                                         <div>
                                             <div class="form-check form-switch">
-                                                <label class="form-check-label" for="toggle-tooltip-variant-sites">Variant Sites Only</label>
-                                                <input class="form-check-input" type="checkbox" id="toggle-tooltip-variant-sites" unchecked>
+                                                <label class="form-check-label" for="toggle-tooltip-variant-sites">Variant Sites</label>
+                                                <input class="form-check-input" type="checkbox" id="toggle-tooltip-variant-sites" checked>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div>
+                                            <div class="form-check form-switch">
+                                                <label class="form-check-label" for="toggle-tooltip-non-variant-sites">Non Variant Sites</label>
+                                                <input class="form-check-input" type="checkbox" id="toggle-tooltip-non-variant-sites" checked>
                                             </div>
                                         </div>
                                     </div>
