--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -149,7 +149,7 @@
                                     <div class="row mb-3">
                                         <div>
                                             <div class="form-check form-switch">
-                                                <label class="form-check-label" for="toggle-variant-comparison">Variant Sites Comparison</label>
+                                                <label class="form-check-label" for="toggle-variant-comparison">Variant Sites/Coverage Stat Comparison</label>
                                                 <input class="form-check-input" type="checkbox" id="toggle-variant-comparison" checked>
                                             </div>
                                         </div>
