--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -4,6 +4,8 @@
         <div class="navbar-nav nav me-auto mb-2 mb-lg-0">
             <a type="button" class="nav-link active" aria-current="page" data-bs-toggle="tab"
                data-bs-target="#chart-pane" aria-selected="true">Coverage Plot</a>
+            <a type="button" class="nav-link" aria-current="page" data-bs-toggle="tab"
+               data-bs-target="#varmap-chart-pane" aria-selected="true">Variant Heatmap</a>
             <a type="button" class="nav-link" data-bs-toggle="tab" data-bs-target="#summary-table"
                aria-selected="false">Summary Information</a>
             <a type="button" class="nav-link" data-bs-toggle="tab" data-bs-target="#about"
@@ -17,6 +19,9 @@
 <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane show active" id="chart-pane" role="tabpanel">
         <div class="container-fluid" id="chart"></div>
+    </div>
+    <div class="tab-pane" id="varmap-chart-pane" role="tabpanel">
+        <div class="container-fluid" id="varmap-chart"></div>
     </div>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="control-menu">
         <div class="offcanvas-header">
@@ -72,6 +77,26 @@
                                             Set
                                         </button>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#varmap" aria-expanded="false" aria-controls="varmap">Variant Heatmap Properties
+                        </button>
+                    </h2>
+                    <div id="varmap" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="row mb-3">
+                                <div>
+                                    <label for="varmap-height-input" class="form-label">Heatmap Height</label>
+                                    <input type="range" id="varmap-height-input" class="form-range" value="50" min="5"
+                                           max="70" step="1" onchange="updateVarMapHeight(this.value);">
+                                    <output style="display: block; text-align:center;" type="text"
+                                            id="varmap-height-output">50<span>%</span></output>
                                 </div>
                             </div>
                         </div>
