--- a/wgscovplot/tmpl/wgscovplot_template.html
+++ b/wgscovplot/tmpl/wgscovplot_template.html
@@ -44,7 +44,6 @@
          * @type {Dict[samples_name: variant_data]}
          */
         window.variants = {{ variant_data }};
-
         /**
          * Dict of gene or amplicon features
          * @type {Dict[]}
@@ -56,6 +55,9 @@
          * @type {Dict[]}
          */
         const ampliconDepthBarData = {{ amplicon_data }}
+
+        window.variantMatrix = {{ variant_matrix }}
+        window.mutations = {{ mutation }}
 
         /**
          * Whether to plot gene feature or not
@@ -99,7 +101,7 @@
          * The max value is set for y-Axis
          * @type {number}
          */
-        const yAxisMax = {{ max_depth }}
+        const maxDepth = {{ max_depth }}
 
         function updateChartDivSize() {
             let BOTTOM_PADDING = 20;
@@ -109,13 +111,23 @@
                 height = 300;
             }
             $chart.style.height = height + 'px';
+            $chart.style.width = window.innerWidth + 'px';
             chart.resize();
+            $variantHeatmap.style.height = height + 'px';
+            $variantHeatmap.style.width = window.innerWidth + 'px';
+            variantHeatmap.resize();
         }
+
+
         document.addEventListener("DOMContentLoaded", function(event) {
-            var $chart = document.getElementById('chart');
+            var $chart = document.getElementById("chart");
+            var $variantHeatmap = document.getElementById("varmap-chart");
             window.$chart = $chart;
-            var chart = wgscovplot.echarts.init($chart, 'white', {renderer: 'canvas'});
+            window.$variantHeatmap = $variantHeatmap;
+            var chart = wgscovplot.echarts.init($chart, "white", {renderer: "canvas"});
+            var variantHeatmap = wgscovplot.echarts.init($variantHeatmap, "white", {renderer:"canvas"})
             window.chart = chart;
+            window.variantHeatmap = variantHeatmap;
             updateChartDivSize();
             initWgscovplotRenderEnv();
         })
