update code for issue #13

--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-                {% if gene_feature == True or amplicon == True %}
+                {% if gene_feature == true or amplicon == true %}
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -231,7 +231,7 @@
                     </h2>
                     <div id="genefeatures" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            {% if gene_feature == True %}
+                            {% if gene_feature == true %}
                             <div class="form-check form-switch">
                                 <label class="form-check-label" for="toggle-genelabel">Show Gene Label</label>
                                 <input class="form-check-input" type="checkbox" id="toggle-genelabel" checked>
